snapshots/truth__resolve__tests__func_redefinition.snap
---
source: src/resolve/tests.rs
expression: "resolve_expect_err::<ast::ScriptFile>(r#\"\nint foo(int x) {\n    return x;\n}\n\nint foo(float y) {\n    return y;\n}\n\"#,\n                                      \"redefinition\").trim()"
---
error: redefinition of function 'foo'
  ┌─ <input>:6:5
  │
2 │ int foo(int x) {
  │     --- originally defined here
  ·
6 │ int foo(float y) {
  │     ^^^ redefinition of function
